# mdnator

./: .gitignore  README.md  mdnator.py  pyproject.toml  requirements.txt
mdnator/: cli.py
